--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,51 +1,78 @@
-version: '2'
+version: '3'
 services:
-    db:
-        image: mysql:5.7
+    mariadb:
+        build:
+            context: ./mariadb
+        restart: always
         ports:
-            - "3306:3306"
+            - 3307:3307
+        volumes:
+            - ./.data/mariadb:/var/lib/mariadb:rw,delegated
         environment:
-            MYSQL_ROOT_PASSWORD: root
-            MYSQL_DATABASE: symfony
-            MYSQL_USER: symfony
-            MYSQL_PASSWORD: symfony
-    php:
-        build: ./php-fpm
+            MYSQL_ROOT_PASSWORD: symfony
+            APP_DB_USER: symfony
+            APP_DB_PASS: symfony
+        healthcheck:
+            test: mysqladmin ping -h localhost -P 3307 -u root --password=symfony
+            interval: 5s
+            retries: 5
+        restart: on-failure
+
+    phpmyadmin:
+        image: phpmyadmin/phpmyadmin:latest
+        environment:
+            PMA_ARBITRARY: 1
+            PMA_HOST: mariadb
+            MYSQL_USERNAME: root
+            MYSQL_ROOT_PASSWORD: symfony
+        depends_on:
+          - mariadb
         ports:
-            - "9000:9000"
+           - 9191:80
+
+    app:
+        build:
+            context: .
+            dockerfile: ./php/Dockerfile
+            args:
+                APP_ENV: ${APP_ENV}
+        hostname: php
+        depends_on:
+            - mariadb
+        ports:
+            - 9000:9000
         volumes:
             - ./symfony:/var/www/symfony:cached
             - ./logs/symfony:/var/www/symfony/var/logs:cached
-        links:
-            - db
+        environment:
+            APP_ENV: ${APP_ENV:-dev}
+        working_dir: /var/www/symfony
+
     nginx:
-        build: ./nginx
+        build: 
+            context: ./nginx
+        hostname: nginx
+        depends_on:
+            - mariadb
+            - app
         ports:
-            - "81:80"
-        links:
-            - php
-        volumes_from:
-            - php
+            - 80:80
+        expose:
+            - 80
         volumes:
+            - ./nginx/default.conf:/etc/nginx/sites-enabled/default
+            - ./symfony:/var/www/symfony:cached
             - ./logs/nginx/:/var/log/nginx:cached
+        environment:
+            - "VIRTUAL_HOST=symfony.localhost"
+
     elk:
         image: willdurand/elk
         ports:
-            - "82:80"
+            - 81:80
         volumes:
             - ./elk/logstash:/etc/logstash:cached
             - ./elk/logstash/patterns:/opt/logstash/patterns:cached
-        volumes_from:
-            - php
+        depends_on:
+            - app
             - nginx
-    phpmyadmin:
-         image: phpmyadmin/phpmyadmin
-         environment:
-          - MYSQL_DATABASE=symfony
-          - MYSQL_USER=symfony
-          - MYSQL_PASSWORD=symfony
-          - MYSQL_ROOT_PASSWORD=root
-         depends_on:
-          - db
-         ports:
-           - "9191:80"
