--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,18 +1,4 @@
-FROM alpine:3.6
+FROM nginx:stable-alpine
 
-MAINTAINER Vincent Composieux <vincent.composieux@gmail.com>
-
-RUN apk add --update nginx
-RUN rm -rf /var/cache/apk/* && rm -rf /tmp/*
-
-ADD nginx.conf /etc/nginx/
-ADD symfony.conf /etc/nginx/conf.d/
-
-RUN echo "upstream php-upstream { server php:9001; }" > /etc/nginx/conf.d/upstream.conf
-
-RUN adduser -D -g '' -G www-data www-data
-
-CMD ["nginx"]
-
-EXPOSE 80
-EXPOSE 443
+COPY default.conf /etc/nginx/conf.d
+COPY nginx.conf /etc/nginx
