--- a/symfony/.env.dist
+++ b/symfony/.env.dist
@@ -13,5 +13,5 @@ APP_SECRET=c60b3f87b72d5dc0c7dfede7a8c0f13c
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://symfony:symfony@db:3306/symfony
+DATABASE_URL="mysql://symfony:symfony@mariadb:3306/symfony"
 ###< doctrine/doctrine-bundle ###
